syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.control";
option java_outer_classname = "controlImpl";

package control;

// Interface exported by the server.
//2 bidirectional streaming RPC and 1 unary RPC
service controlSchedule {
	rpc getHeating(stream energyDemandRequest) returns (stream heatingResponse) {};
	rpc getLighting(stream energyDemandRequest) returns (stream lightingResponse) {};
	rpc getSchedule(buildingIDRequest) returns (scheduleResponse) {};
}

// define each variable in rpc method separately
//3 methods in a service

message buildingIDRequest {
  int32 buildingID = 1;
}

message energyDemandRequest {
  int32 buildingID = 1;
  int32 energyDemand = 2;
}

message heatingResponse {
  string heatingAction = 1;
}

message lightingResponse {
  string lightingAction = 1;
}

message scheduleResponse {
  string scheduleAdvice= 1;
}
